ajout composants indieweb
webmention css et composants webmention
Premiers pas avec composants nanopub

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -36,5 +36,6 @@
 
 <!-- CSS -->
 <link rel="stylesheet" href="/css/style-min.css">
+<link rel="stylesheet" href="/css/webmention.css">
 </body>
 </html>
