--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -38,6 +38,13 @@
     <!-- /Real Favicon Generator favicons -->
     <link rel="alternate" href="/index.xml" type="application/rss+xml" title="{{ .Site.Title }}">
     <link href="https://micro.blog/xtof" rel="me" />
+    <!-- webmention  -->
+    <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
+    <!-- composants indieweb  -->
+  <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
+  <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
+  <link rel="micropub" href="https://christopheducamp.com/nanopub.php" />
+
     <title>{{ $isHomePage := eq .Title .Site.Title }}{{ .Title }}{{ if eq $isHomePage false }} - {{ .Site.Title }}{{ end }}</title>
 </head>
 
