webmention placé sour le bloc édition
à raffiner avec un formulaire d'entrée d'URL

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1116,7 +1116,7 @@ Social Links from the Decode theme by MachoThemes
 
 .mention-edit {
     padding-top:0;
-    font-size:.3rem;
+    font-size: 1.5rem;
     display:flex;
     flex-direction:column;
     justify-content:space-between
