--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -35,6 +35,6 @@
     {{ end }}
 
 <!-- CSS -->
-<link rel="stylesheet" href="/css/style-min.css">
+<link rel="stylesheet" href="/css/style.css">
 </body>
 </html>
