--- a/layouts/partials/webmention.html
+++ b/layouts/partials/webmention.html
@@ -1,4 +1,4 @@
-<script id="webmention-hosted" src="https://webmention.herokuapp.com/api/embed?example"></script><script id="webmention-hosted">
+<script id="webmention-hosted">
 (function () {
 var sn = document.createElement("script"), s = document.getElementsByTagName("script")[0], url;
 url = document.querySelectorAll ? document.querySelectorAll("link[rel~=canonical]") : false;
