correction url micropub.php

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -43,7 +43,7 @@
     <!-- composants indieweb  -->
   <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
-  <link rel="micropub" href="https://https://christopheducamp.com/micropub.php" />
+  <link rel="micropub" href="https://christopheducamp.com/micropub.php" />
 
     <title>{{ $isHomePage := eq .Title .Site.Title }}{{ .Title }}{{ if eq $isHomePage false }} - {{ .Site.Title }}{{ end }}</title>
 </head>
