--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -41,7 +41,7 @@
     <!-- webmention  -->
     <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
     <!-- composants indieweb  -->
-
+  <link rel="authorization_endpoint" href="https://indieauth.com/auth">
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
   <link rel="micropub" href="https://micro-pub-xtof.herokuapp.com/micropub/main" />
 
