--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,6 +5,7 @@
 			{{ with .Site.Params.email }}<a rel="me" class="u-email" href="mailto:{{ . }}" target="_blank">Email</a>{{ end }}
 			{{ with .Site.Params.twitter }}<a rel="me" href="{{ . }}" target="_blank">Twitter</a>{{ end }}
 			{{ with .Site.Params.facebook }}<a rel="me" href="{{ . }}" target="_blank">Facebook</a>{{ end }}
+			{{ with .Site.Params.instagram }}<a rel="me" href="{{ . }}" target="_blank">Instagram</a>{{ end }}
 			{{ with .Site.Params.github }}<a rel="me" href="{{ . }}" target="_blank">GitHub</a>{{ end }}
 			{{ with .Site.Params.gitlab }}<a rel="me" href="{{ . }}" target="_blank">GitLab</a>{{ end }}
 		</div>
