--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -38,10 +38,12 @@
     <!-- /Real Favicon Generator favicons -->
     <link rel="alternate" href="/index.xml" type="application/rss+xml" title="{{ .Site.Title }}">
     <link href="https://micro.blog/xtof" rel="me" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="/css/style.css">
     <!-- webmention  -->
     <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
     <!-- composants indieweb  -->
-  <link rel="micropub" href="https://micropub-xtof.herokuapp.com/micropub/main" />
+    <link rel="micropub" href="https://micropub-xtof.herokuapp.com/micropub/main" />
   <link rel="authorization_endpoint" href="https://indieauth.com/auth">
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
 
