Licence CC traduction et pointage vers la versinn française

--- a/layouts/partials/page-edit.html
+++ b/layouts/partials/page-edit.html
@@ -2,5 +2,5 @@
 <a href="{{.Site.Params.ghrepo}}edit/master/content/{{.File.Path}}" role="button" class="button button-primary">
     <span class="fa-stack">
         <i class="fa fa-github"></i>
-    </span>Améliorer cette page
+    </span>Améliorez cette page
 </a>
