--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,14 +2,15 @@
 	<footer role="contentinfo">
 		<div class="hr"></div>
 		<div class="footer-link">
-			{{ with .Site.Params.email }}<a rel="me" class="u-email" href="mailto:{{ . }}" target="_blank">Email</a>{{ end }}
-			{{ with .Site.Params.twitter }}<a rel="me" href="{{ . }}" target="_blank">Twitter</a>{{ end }}
-			{{ with .Site.Params.facebook }}<a rel="me" href="{{ . }}" target="_blank">Facebook</a>{{ end }}
-			{{ with .Site.Params.instagram }}<a rel="me" href="{{ . }}" target="_blank">Instagram</a>{{ end }}
-			{{ with .Site.Params.github }}<a rel="me" href="{{ . }}" target="_blank">GitHub</a>{{ end }}
-			{{ with .Site.Params.gitlab }}<a rel="me" href="{{ . }}" target="_blank">GitLab</a>{{ end }}
+			{{ with .Site.Params.email }}<a rel="me" class="u-email" href="mailto:{{ . }}" target="_blank">E-mail</a>{{ end }}  /
+			{{ with .Site.Params.twitter }}<a rel="me" href="{{ . }}" target="_blank">Twitter</a>{{ end }}  /
+			{{ with .Site.Params.facebook }}<a rel="me" href="{{ . }}" target="_blank">Facebook</a>{{ end }}  /
+			{{ with .Site.Params.instagram }}<a rel="me" href="{{ . }}" target="_blank">Instagram</a>{{ end }}  /
+			{{ with .Site.Params.github }}<a rel="me" href="{{ . }}" target="_blank">GitHub</a>{{ end }}  /
+			{{ with .Site.Params.gitlab }}<a rel="me" href="{{ . }}" target="_blank">GitLab</a>{{ end }}  /
+            {{ with .Site.Params.mastodon }}<a rel="me" href="{{ . }}" target="_blank">Mastodon</a>{{ end }}
 		</div>
-		<div class="copyright">Copyright &copy; <!--{{ .Site.Copyright | safeHTML }}-->
+		<div class="copyright"><a title="licence creative commons 3.0" href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.fr">Copyright &copy;</a> <!--{{ .Site.Copyright | safeHTML }}-->
             <span rel="author" class="p-author h-card">
 
                     <a href="{{ .Site.Params.authorurl }}" ><img class="u-photo" src="{{ .Site.Params.logo }}" width="60" height="60" alt="{{ .Site.Title }}"> {{ .Site.Params.author }}</a>
