--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -46,6 +46,7 @@
     <link rel="micropub" href="https://micropub-xtof.herokuapp.com/micropub/main" />
   <link rel="authorization_endpoint" href="https://indieauth.com/auth">
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
+<link rel="microsub" href="https://aperture.p3k.io/microsub/793">
 
 
     <title>{{ $isHomePage := eq .Title .Site.Title }}{{ .Title }}{{ if eq $isHomePage false }} - {{ .Site.Title }}{{ end }}</title>
