--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -38,6 +38,8 @@
     <!-- /Real Favicon Generator favicons -->
     <link rel="alternate" href="/index.xml" type="application/rss+xml" title="{{ .Site.Title }}">
     <link href="https://micro.blog/xtof" rel="me" />
+    <!-- Mastodon @indieweb.social -->
+    <a rel="me" href="https://indieweb.social/@Xtof">Mastodon</a>
     <!-- CSS -->
     <link rel="stylesheet" href="/css/style.css">
     <!-- webmention  -->
